--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,36 @@
 .App {
   text-align: center;
+  font-family: 'Poppins', sans-serif;
+  display: grid;
+  place-items: center;
+  height: 100vh;
+
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container {
+  height: 98vh;
+  /* margin: 5px; */
+  margin-left: 5px;
+  margin-right: 5px;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content:space-evenly;
+  background-color: rgba(255, 248, 220, 0.1);
+  border-radius: 10px;
+  padding: 0px 20px;
 }
 
-.App-link {
-  color: #61dafb;
+.editGoButtons {
+  display: flex;
+  flex-wrap: wrap;
+  flex: 0 1;
+  justify-content: space-evenly;
+  margin: 20px;
+  
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+button {
+  margin: 10px;
 }
+
