--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,22 @@
   padding: 0px 20px;
 }
 
+.editButton {
+  padding:  10px 80px;
+  border: 0;
+  border-radius: 25px;
+  font-size: 1.3rem;
+  background-color: rgb(120, 120, 121);
+  cursor:grab;
+  color: rgb(230, 230, 230);
+  font-family: 'Poppins', sans-serif;
+
+}
+
+.editButton:hover {
+  background-color: rgb(73, 73, 73);
+}
+
 .editGoButtons {
   display: flex;
   flex-wrap: wrap;
@@ -30,7 +46,26 @@
 }
 
 
-button {
-  margin: 10px;
+
+
+.listModal {
+  background-color: rgb(120, 159, 177);
+  border-radius: 10px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
+.closeWindowButton {
+  padding: 3px 8px;
+  border: 0;
+  border-radius: 50px;
+  margin: 10px;
+  margin-left: auto;
+  font-size: 1.2rem;
+  box-shadow: 0 0 9px rgb(61, 110, 112);
+}
