--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,13 @@
 
 }
 
+.resultsText {
+  font-size: 2rem;
+  background-color: rgba(255, 255, 255, 0.2);
+  border-radius: 5px;
+  margin: 0;
+}
+
 .container {
   height: 98vh;
   /* margin: 5px; */
@@ -36,6 +43,22 @@
   background-color: rgb(73, 73, 73);
 }
 
+.goButton {
+  padding: 10px 80px;
+  border: 0;
+  border-radius: 25px;
+  font-size: 1.3rem;
+  background-color: rgb(204, 110, 75);
+  cursor:grab;
+  color: rgb(230, 230, 230);
+  font-family: 'Poppins', sans-serif;
+}
+
+.goButton:hover {
+  background-color: rgb(175, 79, 45);
+  
+}
+
 .editGoButtons {
   display: flex;
   flex-wrap: wrap;
@@ -49,7 +72,7 @@
 
 
 .listModal {
-  background-color: rgb(120, 159, 177);
+  background-color: rgb(247, 133, 92);
   border-radius: 10px;
   position: absolute;
   top: 50%;
@@ -58,7 +81,13 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  box-shadow: 0 0 9px rgb(67, 119, 145);
+  max-height: 80vh;
 }
+
+
+
+
 
 .closeWindowButton {
   padding: 3px 8px;
@@ -67,5 +96,63 @@
   margin: 10px;
   margin-left: auto;
   font-size: 1.2rem;
-  box-shadow: 0 0 9px rgb(61, 110, 112);
+  box-shadow: 0 0 9px rgb(163, 86, 58);
+}
+
+
+.list {
+  overflow-y: auto;
+  /* padding: 5px; */
+}
+
+
+
+.itemName {
+  background-color: rgba(250, 250, 250, 0.534);
+  margin: 10px;
+  padding-left: 10px;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: row;
+}
+
+.deleteButton {
+  /* margin: 10px; */
+  margin-left: auto;
+  /* padding: 0px 5px; */
+  border: 0;
+  border-radius: 0px 10px 10px 0px;
+  font-size: 1.2rem;
+  cursor: grab;
+}
+
+
+.inputArea {
+  padding: 10px;
+  background-color:rgb(247, 133, 92);
+ position: sticky; 
+  bottom: 0;
+  margin: 0;
+  border-radius: 0 0 10px 10px;
+}
+
+.inputTextArea {
+  border: 0;
+  border-radius: 5px 0 0 5px;
+  font-size: 1.2rem;
+  padding: 10px;
+}
+
+.submitButton {
+  border: 0;
+  border-radius: 0 5px 5px 0;
+  font-size: 1.2rem;
+  padding: 10px;
+  color: rgb(237, 236, 235);
+  background-color: rgb(73, 122, 155);
+}
+
+.submitButton:hover {
+  cursor: grab;
+  background-color: rgb(58, 97, 122);
 }
