--- a/src/App.css
+++ b/src/App.css
@@ -106,10 +106,30 @@ button {
 
 .list {
   overflow-y: auto;
-  /* padding: 5px; */
+  width: 100%;
 }
 
+::-webkit-scrollbar {
+  width: 5px;
+  border-radius: 10px;
+  background: rgba(238, 238, 238, 0.46);
+  box-shadow: inset 0 0 5px rgba(165, 164, 164, 0.994);
+}
 
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey; 
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: rgb(118, 116, 116); 
+  
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: rgb(80, 80, 80); 
+}
 
 .itemName {
   background-color: rgba(250, 250, 250, 0.534);
@@ -123,7 +143,6 @@ button {
 .deleteButton {
   margin: 0px;
   margin-left: auto;
-  /* padding: 0px 5px; */
   border: 0;
   border-radius: 0px 10px 10px 0px;
   font-size: 1.2rem;
@@ -134,9 +153,6 @@ button {
 .inputArea {
   padding: 10px;
   background-color:rgb(247, 133, 92);
-  position: sticky; 
-  bottom: 0;
-  margin: 0;
   border-radius: 0 0 10px 10px;
   display: flex;
   flex-direction: row;
@@ -147,14 +163,14 @@ button {
 
 .inputTextArea {
   border: 0;
-  border-radius: 5px 0 0 5px;
+  border-radius: 10px 0 0 10px;
   font-size: 1.2rem;
   padding: 10px;
 }
 
 .submitButton {
   border: 0;
-  border-radius: 0 5px 5px 0;
+  border-radius: 0 10px 10px 0;
   font-size: 1.2rem;
   padding: 10px;
   color: rgb(237, 236, 235);
