--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,8 @@
 }
 
 .resultsText {
-  font-size: 2.3rem;
+  font-size: 2rem;
+  font-weight: 600;
   background-color: rgba(255, 255, 255, 0.2);
   border-radius: 5px;
   margin: 0;
