--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,6 @@
 
 .resultsText {
   font-size: 2rem;
-  font-weight: 600;
   background-color: rgba(255, 255, 255, 0.2);
   border-radius: 5px;
   margin: 0;
@@ -35,7 +34,7 @@ button {
   padding:  5px 80px;
   border: 2px solid  rgb(209, 112, 77);
   border-radius: 25px;
-  font-size: 1.6rem;
+  font-size: 1.3rem;
   font-weight: 600;
   background-color: inherit;
   cursor:grab;
@@ -53,7 +52,7 @@ button {
   padding: 5px 80px;
   border: 2px solid   rgb(209, 112, 77);
   border-radius: 25px;
-  font-size: 1.6rem;
+  font-size: 1.3em;
   font-weight: 600;
   background-color: rgb(209, 112, 77);
   cursor:grab;
@@ -73,6 +72,7 @@ button {
   flex: 0 1;
   justify-content: space-evenly;
   margin: 20px;
+  margin-bottom: 30px;
   
 }
 
