added testing with enzyme/jest

--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,10 @@
-.App {
+.foodApp {
   text-align: center;
   font-family: 'Poppins', sans-serif;
   display: grid;
   place-items: center;
   height: 100vh;
+  
 
 }
 
